Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-10957

Assertion failure when dropping a myisam table with wsrep_replicate_myisam enabled

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.1.18
    • 10.1.19
    • Galera
    • None

    Description

      perl mtr galera.galera_var_replicate_myisam_on
      ...
      #7  0x00007f7cc1c47c82 in __GI___assert_fail (assertion=0x55935a903c90 "thd->wsrep_exec_mode == LOCAL_STATE", file=0x55935a903008 "/home/nirbhay/project/git-repo/mariadb/10.1/sql/wsrep_mysqld.cc", line=1593, function=0x55935a904440 <wsrep_to_isolation_begin(THD*, char*, char*, TABLE_LIST const*)::__PRETTY_FUNCTION__> "int wsrep_to_isolation_begin(THD*, char*, char*, const TABLE_LIST*)") at assert.c:101
      #8  0x000055935a107068 in wsrep_to_isolation_begin (thd=0x55935e09d850, db_=0x0, table_=0x0, table_list=0x7f7cb41033a0) at /home/nirbhay/project/git-repo/mariadb/10.1/sql/wsrep_mysqld.cc:1593
      #9  0x0000559359ef77a8 in open_tables (thd=0x55935e09d850, options=..., start=0x7f7cb4102f48, counter=0x7f7cb4102f64, flags=2050, prelocking_strategy=0x7f7cb4102fe0) at /home/nirbhay/project/git-repo/mariadb/10.1/sql/sql_base.cc:4743
      #10 0x0000559359ef8400 in open_and_lock_tables (thd=0x55935e09d850, options=..., tables=0x7f7cb41033a0, derived=false, flags=2050, prelocking_strategy=0x7f7cb4102fe0) at /home/nirbhay/project/git-repo/mariadb/10.1/sql/sql_base.cc:5250
      #11 0x0000559359eebef2 in open_and_lock_tables (thd=0x55935e09d850, tables=0x7f7cb41033a0, derived=false, flags=2050) at /home/nirbhay/project/git-repo/mariadb/10.1/sql/sql_base.h:534
      #12 0x0000559359f01d2f in open_system_tables_for_read (thd=0x55935e09d850, table_list=0x7f7cb41033a0, backup=0x7f7cb41031d0) at /home/nirbhay/project/git-repo/mariadb/10.1/sql/sql_base.cc:9273
      #13 0x000055935a0004c8 in open_stat_tables (thd=0x55935e09d850, tables=0x7f7cb41033a0, backup=0x7f7cb41031d0, for_write=true) at /home/nirbhay/project/git-repo/mariadb/10.1/sql/sql_statistics.cc:144
      #14 0x000055935a002f8a in delete_statistics_for_table (thd=0x55935e09d850, db=0x7f7cb41045d0, tab=0x7f7cb41045e0) at /home/nirbhay/project/git-repo/mariadb/10.1/sql/sql_statistics.cc:3156
      #15 0x000055935a010513 in mysql_rm_table (thd=0x55935e09d850, tables=0x7f7c98006930, if_exists=0 '\000', drop_temporary=0 '\000') at /home/nirbhay/project/git-repo/mariadb/10.1/sql/sql_table.cc:2031
      #16 0x0000559359f5f675 in mysql_execute_command (thd=0x55935e09d850) at /home/nirbhay/project/git-repo/mariadb/10.1/sql/sql_parse.cc:4217
      #17 0x0000559359f6949f in mysql_parse (thd=0x55935e09d850, rawbuf=0x7f7c98006868 "DROP TABLE t1", length=13, parser_state=0x7f7cb4105620) at /home/nirbhay/project/git-repo/mariadb/10.1/sql/sql_parse.cc:7318
      #18 0x0000559359f68bf0 in wsrep_mysql_parse (thd=0x55935e09d850, rawbuf=0x7f7c98006868 "DROP TABLE t1", length=13, parser_state=0x7f7cb4105620) at /home/nirbhay/project/git-repo/mariadb/10.1/sql/sql_parse.cc:7141
      #19 0x0000559359f57b63 in dispatch_command (command=COM_QUERY, thd=0x55935e09d850, packet=0x55935e0a42c1 "DROP TABLE t1", packet_length=13) at /home/nirbhay/project/git-repo/mariadb/10.1/sql/sql_parse.cc:1485
      #20 0x0000559359f568d3 in do_command (thd=0x55935e09d850) at /home/nirbhay/project/git-repo/mariadb/10.1/sql/sql_parse.cc:1108
      #21 0x000055935a08cda1 in do_handle_one_connection (thd_arg=0x55935e09d850) at /home/nirbhay/project/git-repo/mariadb/10.1/sql/sql_connect.cc:1350
      #22 0x000055935a08caf0 in handle_one_connection (arg=0x55935e09d850) at /home/nirbhay/project/git-repo/mariadb/10.1/sql/sql_connect.cc:1262
      #23 0x000055935a370760 in pfs_spawn_thread (arg=0x55935e05bdc0) at /home/nirbhay/project/git-repo/mariadb/10.1/storage/perfschema/pfs.cc:1860
      #24 0x00007f7cc26756fa in start_thread (arg=0x7f7cb4106b00) at pthread_create.c:333
      #25 0x00007f7cc1d20b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109
      

      Attachments

        Issue Links

          Activity

            There are no comments yet on this issue.

            People

              nirbhay_c Nirbhay Choubey (Inactive)
              nirbhay_c Nirbhay Choubey (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.